--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -3,7 +3,7 @@ title: Social Sciences & Humanities Open Marketplace
 ---
 
 Discover new resources for your research in Social Sciences and Humanities:
-tools, services, training materials and datasets, contextualised.
+tools, services, training materials, publications and datasets, contextualised.
 [Read more...](/about)
 
 **SSH Open Marketplace is under development and the current content is subject
