chore: update deps

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,24 +1,52 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
+
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
-is a discovery portal which pools and contextualises resources for Social Sciences and Humanities research communities: tools, services, training materials, datasets and workflows. The Marketplace highlights and showcases solutions and research practices for every step of the SSH research data life cycle.
+is a discovery portal which pools and contextualises resources for Social
+Sciences and Humanities research communities: tools, services, training
+materials, datasets and workflows. The Marketplace highlights and showcases
+solutions and research practices for every step of the SSH research data life
+cycle.
 
 ## Key aspects
 
-* **Curation** – This portal thrives on a curation process that makes it easy to discover the most appropriate results for each request, so that researchers can discover the best resources for the digital aspects of their work. The curation process relies on three components: automatic ingest and update of data sources; continuous curation of the information by the editorial team and – most important – contributions from its users, the SSH research community.
-* **Community** – The content available in the SSH Open Marketplace and its contextualisation is the result of collaborative work that is characterised by a user-centric view. Features that allow contributions, feedback and comments are implemented – or will be soon – to ensure that the portal mirrors real research practices. 
-* **Contextualisation** – The portal puts all items into context: each solution suggested is linked to other related resources (e.g. a tutorial showing how to use a tool, a tool used in a workflow, a publication presenting research results produced using a given service). This contextualisation reinforces serendipity and helps users to reuse the content of the SSH Open Marketplace.
+- **Curation** – This portal thrives on a curation process that makes it easy to
+  discover the most appropriate results for each request, so that researchers
+  can discover the best resources for the digital aspects of their work. The
+  curation process relies on three components: automatic ingest and update of
+  data sources; continuous curation of the information by the editorial team and
+  – most important – contributions from its users, the SSH research community.
+- **Community** – The content available in the SSH Open Marketplace and its
+  contextualisation is the result of collaborative work that is characterised by
+  a user-centric view. Features that allow contributions, feedback and comments
+  are implemented – or will be soon – to ensure that the portal mirrors real
+  research practices.
+- **Contextualisation** – The portal puts all items into context: each solution
+  suggested is linked to other related resources (e.g. a tutorial showing how to
+  use a tool, a tool used in a workflow, a publication presenting research
+  results produced using a given service). This contextualisation reinforces
+  serendipity and helps users to reuse the content of the SSH Open Marketplace.
 
 ## A thematic contribution to the European Open Science Cloud
 
 ### SSHOC & EOSC
 
-SSHOC is one of the activities foreseen under INFRAEOSC 04-2018, which supports the integration and consolidation of thematic e-infrastructure platforms in preparation for connecting them to the European Open Science Cloud (EOSC). The overall objective of the SSHOC project is to realise the Social Sciences and Humanities part of EOSC.
-The SSH Open Marketplace, the discovery portal and aggregator of the SSHOC project, is a direct contribution to the [European Open Science Cloud (EOSC)](https://sshopencloud.eu/sshoc-eosc). As a domain oriented portal, the SSH Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC Catalogue & Marketplace) and aims to facilitate fluid exchange of tools, services, data and knowledge.
+SSHOC is one of the activities foreseen under INFRAEOSC 04-2018, which supports
+the integration and consolidation of thematic e-infrastructure platforms in
+preparation for connecting them to the
+[European Open Science Cloud (EOSC)](https://sshopencloud.eu/sshoc-eosc). The
+overall objective of the SSHOC project is to realise the Social Sciences and
+Humanities part of EOSC.
 
-![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png "SSHOC Project Structure")
+The SSH Open Marketplace, the discovery portal and aggregator of the SSHOC
+project, is a direct contribution to EOSC. As a domain oriented portal, the SSH
+Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
+Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
+services, data and knowledge.
+
+![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure')
 
 ## In development
 
@@ -27,9 +55,9 @@ larger SSHOC project and is led by the DARIAH ERIC.
 
 Three releases of this website are planed between June 2020 and December 2021:
 
-* **June 2020**: alpha version of the website is available for testers
-* **December 2020**: beta and public release
-* **December 2021**: final release of the SSH Open Marketplace
+- **June 2020**: alpha version of the website is available for testers
+- **December 2020**: beta and public release
+- **December 2021**: final release of the SSH Open Marketplace
 
 If you are interested in contributing to the SSH Open Marketplace, join our
 testers' team, you can register
