content(update): Pages 'about'

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,7 +1,6 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
-
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
 is a discovery portal which pools and contextualises resources for Social
@@ -10,20 +9,22 @@ materials, datasets and workflows. The Marketplace highlights and showcases
 solutions and research practices for every step of the SSH research data life
 cycle.
 
+The SSH Open Marketplace is currently under development.  The final release is scheduled for December 2021.
+
 ## Key aspects
 
-- **Curation** – This portal thrives on a curation process that makes it easy to
+* **Curation** – This portal thrives on a curation process that makes it easy to
   discover the most appropriate results for each request, so that researchers
   can discover the best resources for the digital aspects of their work. The
   curation process relies on three components: automatic ingest and update of
   data sources; continuous curation of the information by the editorial team and
   – most important – contributions from its users, the SSH research community.
-- **Community** – The content available in the SSH Open Marketplace and its
+* **Community** – The content available in the SSH Open Marketplace and its
   contextualisation is the result of collaborative work that is characterised by
   a user-centric view. Features that allow contributions, feedback and comments
   are implemented – or will be soon – to ensure that the portal mirrors real
   research practices.
-- **Contextualisation** – The portal puts all items into context: each solution
+* **Contextualisation** – The portal puts all items into context: each solution
   suggested is linked to other related resources (e.g. a tutorial showing how to
   use a tool, a tool used in a workflow, a publication presenting research
   results produced using a given service). This contextualisation reinforces
@@ -46,30 +47,22 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure')
+![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure' "Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121")
 
-## In development
+### Lifting the SSH Open Marketplace into the Cloud
 
-The development of the portal takes place within Work Package 7 (WP7) of the
-larger SSHOC project and is led by the DARIAH ERIC.
+The SSH Open Marketplace will be fully integrated in the EOSC landscape, for example by using EOSC Core services, such as the Federated Identity (AAI) services or the EOSC helpdesk. A SSHOC task force is working on means to harmonize views on common themes and foster contact with other European and international organizations operating in the EOSC environment. Specific attention will be paid to the integration of the Marketplace with other EOSC catalogues and/ or marketplace(s). Beyond this task force, the SSH Open Marketplace is built following recommendations and outputs of [SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14), led by CLARIN, that aims at “Lifting Technologies and Services into the SSH Cloud”.
 
-Three releases of this website are planed between June 2020 and December 2021:
+### ERICs contributions
 
-- **June 2020**: alpha version of the website is available for testers
-- **December 2020**: beta and public release
-- **December 2021**: final release of the SSH Open Marketplace
+In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH Open Marketplace sustainability after the SSHOC project.
 
-If you are interested in contributing to the SSH Open Marketplace, join our
-testers' team, you can register
-[here](https://www.sshopencloud.eu/form/ssh-open-marketplace-join-community-testers/),
-or check our public consultation where we gather users' feedback (available soon
-on the [SSHOC website](https://www.sshopencloud.eu/)).
+\| 
 
-And if you want to actively follow the development of the SSH Open Marketplace,
-have a look at [our GitLab instance](https://gitlab.gwdg.de/sshoc/).
+![](/assets/images/clarin-logo.png)
 
-## Contact us
+\| 
 
-For any questions relating to the development of the SSH Open Marketplace or the
-SSHOC project, please visit the [website](/contact) or contact
-[sshopenmarketplace@sshopencloud.eu](mailto:sshopenmarketplace@sshopencloud.eu).
+![](/assets/images/dariah-eu-logo.png)
+
+\| | | |
