content(update): Pages 'about'

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -57,12 +57,4 @@ The SSH Open Marketplace will be fully integrated in the EOSC landscape, for exa
 
 In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH Open Marketplace sustainability after the SSHOC project.
 
-\| 
-
-![](/assets/images/clarin-logo.png)
-
-\| 
-
-![](/assets/images/dariah-eu-logo.png)
-
-\| | | |
+| [![](/assets/images/clarin-logo.png =120x)](https://clarin.eu) | [![](/assets/images/dariah-eu-logo.png)](https://dariah.eu) |
