--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -57,4 +57,7 @@ The SSH Open Marketplace will be fully integrated in the EOSC landscape, for exa
 
 In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH Open Marketplace sustainability after the SSHOC project.
 
-| [![](/assets/images/clarin-logo.png =120x)](https://clarin.eu) | [![](/assets/images/dariah-eu-logo.png)](https://dariah.eu) |
+<a href="https://clarin.eu"><img src="/assets/images/clarin-logo.png" width="120"/></a>
+
+[![](/assets/images/clarin-logo.png = 120x )](https://clarin.eu)  
+[![](/assets/images/dariah-eu-logo.png = 120x )](https://dariah.eu) 
