--- a/content/pages/contact.mdx
+++ b/content/pages/contact.mdx
@@ -2,6 +2,4 @@
 title: Contact
 ---
 
-For any questions relating to the development of the SSH Open Marketplace or the
-SSHOC project, please visit the website or contact
-[sshopenmarketplace@sshopencloud.eu](mailto:sshopenmarketplace@sshopencloud.eu).
+For any questions related to the development of the SSH Open Marketplace, do not hesitate to contact us via the form below or directly at [sshopenmarketplace@sshopencloud.eu](mailto:sshopenmarketplace@sshopencloud.eu).
