content(update): Pages 'about'

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,6 +1,8 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
+![]()
+
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
 is a discovery portal which pools and contextualises resources for Social
@@ -47,7 +49,7 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure' "Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121")
+![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure')
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
@@ -57,7 +59,8 @@ The SSH Open Marketplace will be fully integrated in the EOSC landscape, for exa
 
 In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH Open Marketplace sustainability after the SSHOC project.
 
+<a href="https://www.cessda.eu"><img src="/assets/images/CESSDA-logo.png" width="120"/></a>
 <a href="https://clarin.eu"><img src="/assets/images/clarin-logo.png" width="120"/></a>
-
-[![](/assets/images/clarin-logo.png = 120x )](https://clarin.eu)  
-[![](/assets/images/dariah-eu-logo.png = 120x )](https://dariah.eu) 
+<a href="https://dariah.eu"><img src="/assets/images/dariah-eu-logo.png" width="120"/></a>
+<a href="http://www.europeansocialsurvey.org"><img src="/assets/images/ESS-logo" width="120"/></a>
+<a href="http://www.share-project.org"><img src="/assets/images/share-eric.png" width="120"/></a>
