--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,6 +1,7 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
+
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
 is a discovery portal which pools and contextualises resources for Social
@@ -9,22 +10,23 @@ materials, datasets and workflows. The Marketplace highlights and showcases
 solutions and research practices for every step of the SSH research data life
 cycle.
 
-The SSH Open Marketplace is currently under development.  The final release is scheduled for December 2021.
+The SSH Open Marketplace is currently under development.  The final release is
+scheduled for December 2021.
 
 ## Key aspects
 
-* **Curation** – This portal thrives on a curation process that makes it easy to
+- **Curation** – This portal thrives on a curation process that makes it easy to
   discover the most appropriate results for each request, so that researchers
   can discover the best resources for the digital aspects of their work. The
   curation process relies on three components: automatic ingest and update of
   data sources; continuous curation of the information by the editorial team and
   – most important – contributions from its users, the SSH research community.
-* **Community** – The content available in the SSH Open Marketplace and its
+- **Community** – The content available in the SSH Open Marketplace and its
   contextualisation is the result of collaborative work that is characterised by
   a user-centric view. Features that allow contributions, feedback and comments
   are implemented – or will be soon – to ensure that the portal mirrors real
   research practices.
-* **Contextualisation** – The portal puts all items into context: each solution
+- **Contextualisation** – The portal puts all items into context: each solution
   suggested is linked to other related resources (e.g. a tutorial showing how to
   use a tool, a tool used in a workflow, a publication presenting research
   results produced using a given service). This contextualisation reinforces
@@ -51,14 +53,41 @@ services, data and knowledge.
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
-The SSH Open Marketplace will be fully integrated in the EOSC landscape, for example by using EOSC Core services, such as the Federated Identity (AAI) services or the EOSC helpdesk. A SSHOC task force is working on means to harmonize views on common themes and foster contact with other European and international organizations operating in the EOSC environment. Specific attention will be paid to the integration of the Marketplace with other EOSC catalogues and/ or marketplace(s). Beyond this task force, the SSH Open Marketplace is built following recommendations and outputs of [SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14), led by CLARIN, that aims at “Lifting Technologies and Services into the SSH Cloud”.
+The SSH Open Marketplace will be fully integrated in the EOSC landscape, for
+example by using EOSC Core services, such as the Federated Identity (AAI)
+services or the EOSC helpdesk. A SSHOC task force is working on means to
+harmonize views on common themes and foster contact with other European and
+international organizations operating in the EOSC environment. Specific
+attention will be paid to the integration of the Marketplace with other EOSC
+catalogues and/ or marketplace(s). Beyond this task force, the SSH Open
+Marketplace is built following recommendations and outputs of
+[SSHOC WP3](https://sshopencloud.eu/publications/deliverables?field_wp_tid%5B%5D=14),
+led by CLARIN, that aims at “Lifting Technologies and Services into the SSH
+Cloud”.
 
 ### ERICs contributions
 
-In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH Open Marketplace sustainability after the SSHOC project.
+In the current governance scheme, 5 ERICs are foreseen to contribute to the SSH
+Open Marketplace sustainability after the SSHOC project.
 
-<a href="https://www.cessda.eu"><img src="/assets/images/CESSDA-logo.png" width="120"/></a>
-<a href="https://clarin.eu"><img src="/assets/images/clarin-logo.png" width="120"/></a>
-<a href="https://dariah.eu"><img src="/assets/images/dariah-eu-logo.png" width="120"/></a>
-<a href="http://www.europeansocialsurvey.org"><img src="/assets/images/ESS-logo" width="120"/></a>
-<a href="http://www.share-project.org"><img src="/assets/images/share-eric.png" width="120"/></a>
+<div class="grid grid-cols-5">
+
+
+<a href="https://www.cessda.eu">
+  <img src="/assets/images/cessda-logo.png" />
+</a>
+<a href="https://clarin.eu">
+  <img src="/assets/images/clarin-logo.png" />
+</a>
+<a href="https://dariah.eu">
+  <img src="/assets/images/dariah-eu-logo.png" />
+</a>
+<a href="http://www.europeansocialsurvey.org">
+  <img src="/assets/images/ess-logo.png" />
+</a>
+<a href="http://www.share-project.org">
+  <img src="/assets/images/share-eric.png" />
+</a>
+
+</div>
+
