--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,6 +1,7 @@
 ---
 title: What is the SSH Open Marketplace?
 ---
+
 The Social Sciences and Humanities Open Marketplace, built as part of the
 [Social Sciences and Humanities Open Cloud project (SSHOC)](https://www.sshopencloud.eu/),
 is a discovery portal which pools and contextualises resources for Social
@@ -9,22 +10,24 @@ materials, datasets and workflows. The Marketplace highlights and showcases
 solutions and research practices for every step of the SSH research data life
 cycle.
 
-The SSH Open Marketplace is currently under development. You are currently visiting the beta version released in December 2020. The final release is scheduled for December 2021.
+The SSH Open Marketplace is currently under development. You are currently
+visiting the beta version released in December 2020. The final release is
+scheduled for December 2021.
 
 ## Key aspects
 
-* **Curation** – This portal thrives on a curation process that makes it easy to
+- **Curation** – This portal thrives on a curation process that makes it easy to
   discover the most appropriate results for each request, so that researchers
   can discover the best resources for the digital aspects of their work. The
   curation process relies on three components: automatic ingest and update of
   data sources; continuous curation of the information by the editorial team and
   – most important – contributions from its users, the SSH research community.
-* **Community** – The content available in the SSH Open Marketplace and its
+- **Community** – The content available in the SSH Open Marketplace and its
   contextualisation is the result of collaborative work that is characterised by
   a user-centric view. Features that allow contributions, feedback and comments
   are implemented – or will be soon – to ensure that the portal mirrors real
   research practices.
-* **Contextualisation** – The portal puts all items into context: each solution
+- **Contextualisation** – The portal puts all items into context: each solution
   suggested is linked to other related resources (e.g. a tutorial showing how to
   use a tool, a tool used in a workflow, a publication presenting research
   results produced using a given service). This contextualisation reinforces
@@ -47,7 +50,7 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121](/assets/images/sshoc_project_structure_about1.png 'SSHOC Project Structure' "Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121")
+![SSHOC Project Structure](/assets/images/sshoc_project_structure_about1.png 'Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121')
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
@@ -70,6 +73,7 @@ Open Marketplace sustainability after the SSHOC project.
 
 <div class="grid grid-cols-5">
 
+
 <a href="https://www.cessda.eu">
   <img src="/assets/images/cessda-logo.png" />
 </a>
@@ -87,3 +91,4 @@ Open Marketplace sustainability after the SSHOC project.
 </a>
 
 </div>
+
