--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -2,7 +2,8 @@
 title: Social Sciences & Humanities Open Marketplace
 ---
 
-Discover new and contextualised resources for your research in Social Sciences and Humanities: tools, services, training materials, workflows and datasets.
+Discover new and contextualised resources for your research in Social Sciences
+and Humanities: tools, services, training materials, workflows and datasets.
 [Read more...](/about)
 
 **SSH Open Marketplace is under development and the current content is subject
