--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -50,7 +50,7 @@ Open Marketplace supplements the existing services offered by EOSC (e.g. EOSC
 Catalogue & Marketplace) and aims to facilitate fluid exchange of tools,
 services, data and knowledge.
 
-![SSHOC Project Structure](/assets/images/sshoc_project_structure_about1.png 'Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121')
+![SSHOC Project Structure](/assets/images/sshoc_project_structure_about1.png "Source: Versic Ilijasic, Ivana, & Dekker, Ron. (2020, March 4). SSHOC – Position paper 2020 (Version v1.0). Zenodo. http://doi.org/10.5281/zenodo.3697121")
 
 ### Lifting the SSH Open Marketplace into the Cloud
 
