fix: add grid layout to about the service page

--- a/content/pages/service.mdx
+++ b/content/pages/service.mdx
@@ -1,113 +1,272 @@
 ---
 title: About the service
 ---
-# Sources
 
-During the development phase of the SSH Open Marketplace, we identified and prioritised trusted sources from which we gather information to populate the SSH Open Marketplace. In an initial onboarding phase (first half of 2020), 1,500 we ingested individual resources – tools and services, training materials and workflows. Thanks to an extended population phase (second half of 2020), the beta version of the Marketplace now includes over 5,000 individual items, coming from the following sources:
+## Sources
 
-![](/assets/images/source_TAPoR_logo.png "TAPoR logo")
+During the development phase of the SSH Open Marketplace, we identified and
+prioritised trusted sources from which we gather information to populate the SSH
+Open Marketplace. In an initial onboarding phase (first half of 2020), 1,500 we
+ingested individual resources – tools and services, training materials and
+workflows. Thanks to an extended population phase (second half of 2020), the
+beta version of the Marketplace now includes over 5,000 individual items, coming
+from the following sources:
 
-[TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text analysis and retrieval.
+<div style={{ display: 'grid', gridTemplateColumns: '150px 1fr', gap: '2rem 1rem' }}>
 
-![](/assets/images/ph-en.svg "Programming Historian logo")
 
-The [Programming Historian](https://programminghistorian.org/) publishes novice-friendly, peer-reviewed tutorials that help humanists learn a wide range of digital tools, techniques, and workflows to facilitate research and teaching.
+![TAPoR logo](/assets/images/source_TAPoR_logo.png 'TAPoR logo')
 
-![](/assets/images/source_ssk_logo.svg "Standardization Survival Kit logo")
+[TAPoR](http://tapor.ca/home) is a long-standing gateway to tools used for text
+analysis and retrieval.
 
-The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a collection of research use case scenarios illustrating best practices in Digital Humanities and Heritage research.
+![Programming Historian logo](/assets/images/ph-en.svg 'Programming Historian logo')
 
-![](/assets/images/source_switchboard_logo.png "Language Resource Switchboard logo")
+The [Programming Historian](https://programminghistorian.org/) publishes
+novice-friendly, peer-reviewed tutorials that help humanists learn a wide range
+of digital tools, techniques, and workflows to facilitate research and teaching.
 
-The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you find tools that can process your data.
+![Standardization Survival Kit logo](/assets/images/source_ssk_logo.svg 'Standardization Survival Kit logo')
 
-![](/assets/images/source_dblp_logo_320x120.png "dblp computer science bibliography logo")
+The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a
+collection of research use case scenarios illustrating best practices in Digital
+Humanities and Heritage research.
 
-The [dblp computer science bibliography](https://dblp.org/) provides open bibliographic information on major computer science journals and proceedings. Only a subset of publications related to digital humanities is being ingested in the SSH Open Marketplace.
+![Language Resource Switchboard logo](/assets/images/source_switchboard_logo.png 'Language Resource Switchboard logo')
 
-![](/assets/images/source_eosc_logo.png "EOSC logo")
+The [Language Resource Switchboard](https://switchboard.clarin.eu/) helps you
+find tools that can process your data.
 
-The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/) is an integrated platform that allows easy access to plenty of services and resources for various research domains along with integrated data analytics tools. Only a subset of resources, relevant for Social Sciences and Humanities, is being ingested in the SSH Open Marketplace.
+![dblp computer science bibliography logo](/assets/images/source_dblp_logo_320x120.png 'dblp computer science bibliography logo')
 
-Linguistic, social sciences and cultural heritage sources will be added in 2021. Manual and individual additions of content is also a way to further populate the SSH Open Marketplace. More details are provided in the “How is this website curated?” section below.
+The [dblp computer science bibliography](https://dblp.org/) provides open
+bibliographic information on major computer science journals and
+proceedings. Only a subset of publications related to digital humanities is
+being ingested in the SSH Open Marketplace.
 
-# Types of content
+![EOSC logo](/assets/images/source_eosc_logo.png 'EOSC logo')
 
-The conceptual approach used to structure and classify the SSH Open Marketplace content led to the identification of 5 main types of content:
+The [EOSC Portal catalogue & marketplace](https://marketplace.eosc-portal.eu/)
+is an integrated platform that allows easy access to plenty of services and
+resources for various research domains along with integrated data analytics
+tools. Only a subset of resources, relevant for Social Sciences and Humanities,
+is being ingested in the SSH Open Marketplace.
 
-![](/assets/images/categories/tool-or-service.svg "Tool or service logo")
+</div>
 
-**Tools & services**
-Tools & services are materials or products used to perform activities. Under this type of item, SSH Open Marketplace users will find desktop clients solutions (to be installed locally), browser-based or command-line based resources, mobile apps, programming libraries or APIs, but also data catalogues.
-Example: Gephi is a visualisation and exploration software for all kinds of graphs and networks
 
-![](/assets/images/categories/training-material.svg "Training Materials logo")
+Linguistic, social sciences and cultural heritage sources will be added in 2021.
+Manual and individual additions of content is also a way to further populate the
+SSH Open Marketplace. More details are provided in the “How is this website
+curated?” section below.
 
-**Training materials**
-Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the learning outcomes one would gain from engaging with the material.
-Example: The lesson “Beginner's Guide to Twitter Data” coming from the Programming Historian website.
+## Types of content
 
-![](/assets/images/categories/workflows.svg "Workflows logo")
+The conceptual approach used to structure and classify the SSH Open Marketplace
+content led to the identification of 5 main types of content:
 
-**Workflows**
-A research workflow is a sequence of operation/steps performed on research data during their lifecycle. It can be seen as a recipe, as it was “designed” in the Standardisation Survival Kit. This workflow can be achieved by using diverse tools and facilities, and useful resources are connected to each step.
-Example: “Extract textual content from images” is a workflow composed of 13 steps coming from the Standardization Survival Kit.
+<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
 
-![](/assets/images/categories/dataset.svg "Datasets logo")
 
-**Datasets**
-Dataset is one digital object or a set or collection of data, records or information that is kept as a persistent unit of information  in  the  knowledge  generation  process.  Datasets  are  used  as  evidence  for  some phenomena.
-Example: Parlamint 1.0
+![Tool or service](/assets/images/categories/tool-or-service.svg 'Tool or service logo')
 
-![](/assets/images/categories/publication.svg "Publications logo")
+<div>
 
-**Publications**
-Research results published in an academic journal or repository. In the SSH Open Marketplace, only publications that can be connected to other resources are referenced. We don’t aim at collecting all the research papers in SSH, but only to reinforce the contextualisation of our resources, offering perspectives in which a tool has been used and cited in a paper for exemple.
-Example: “PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora” is a Conference Paper presented during the DH2020 Conference in which you can find an example of use of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
 
-# Main functionalities
+### Tools & services
+
+Tools & services are materials or products used to perform activities. Under
+this type of item, SSH Open Marketplace users will find desktop clients
+solutions (to be installed locally), browser-based or command-line based
+resources, mobile apps, programming libraries or APIs, but also data catalogues.
+Example: Gephi is a visualisation and exploration software for all kinds of
+graphs and networks
+
+</div>
+</div>
+
+
+<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+
+![Training Material](/assets/images/categories/training-material.svg 'Training Material')
+
+<div>
+
+
+### Training materials
+
+Tutorials, lessons or didactic resources explaining how to perform an action or
+highlighting the learning outcomes one would gain from engaging with the
+material. Example: The lesson “Beginner's Guide to Twitter Data” coming from the
+Programming Historian website.
+
+</div>
+</div>
+
+
+<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+
+![Workflow](/assets/images/categories/workflow.svg 'Workflow logo')
+
+<div>
+
+
+### Workflows
+
+A research workflow is a sequence of operation/steps performed on research data
+during their lifecycle. It can be seen as a recipe, as it was “designed” in the
+Standardisation Survival Kit. This workflow can be achieved by using diverse
+tools and facilities, and useful resources are connected to each step. Example:
+“Extract textual content from images” is a workflow composed of 13 steps coming
+from the Standardization Survival Kit.
+
+</div>
+</div>
+
+
+<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+
+![Dataset](/assets/images/categories/dataset.svg 'Dataset logo')
+
+<div>
+
+
+### Datasets
+
+Dataset is one digital object or a set or collection of data, records or
+information that is kept as a persistent unit of information in the knowledge
+generation process. Datasets are used as evidence for some phenomena. Example:
+Parlamint 1.0
+
+</div>
+</div>
+
+
+<div style={{ display: 'grid', gridTemplateColumns: '60px 1fr', columnGap: '1rem' }}>
+
+
+![Publication](/assets/images/categories/publication.svg 'Publication logo')
+
+<div>
+
+
+### Publications
+
+Research results published in an academic journal or repository. In the SSH Open
+Marketplace, only publications that can be connected to other resources are
+referenced. We don’t aim at collecting all the research papers in SSH, but only
+to reinforce the contextualisation of our resources, offering perspectives in
+which a tool has been used and cited in a paper for exemple. Example:
+“PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora”
+is a Conference Paper presented during the DH2020 Conference in which you can
+find an example of use of the SpaCy library (referenced as a tool in the SSH
+Open Marketplace).
+
+</div>
+</div>
+
+
+## Main functionalities
 
 In this beta version of the SSH Open Marketplace, you can:
 
-* search among the resources, refining what you are looking for through faceted search
-  ![](/assets/images/search-refine-screenshot.png "screenshot search resources")
-* browse the content, by activities or keywords
-  ![](/assets/images/browse_activities_screenshot.png "browsing screenshot")
-* obtain a detailed view of every item registered in the website, including a structured set of metadata describing the resource, and highlighting the related items to facilitate the discovery of relevant resources 
-  ![](/assets/images/details-related-screenshot.jpg "detailed view screenshot")
-* report issues. While waiting for more community features – such as the editorial components or the comments section – to be implemented in 2021, the beta release of the SSH Open Marketplace offers you the possibility to report issues on every page of the website. Help us to improve our content or to report a bug, using this temporary functionality!
-* re-use the SSH Open Marketplace content using the Application programming Interface (API). See the API documentation in the “technical aspects” section, if you want to know more.
+- search among the resources, refining what you are looking for through faceted
+  search
+  ![screenshot search resources](/assets/images/search-refine-screenshot.png 'screenshot search resources')
+- browse the content, by activities or keywords
+  ![browsing screenshot](/assets/images/browse_activities_screenshot.png 'browsing screenshot')
+- obtain a detailed view of every item registered in the website, including a
+  structured set of metadata describing the resource, and highlighting the
+  related items to facilitate the discovery of relevant resources
+  ![detailed view screenshot](/assets/images/details-related-screenshot.jpg 'detailed view screenshot')
+- report issues. While waiting for more community features – such as the
+  editorial components or the comments section – to be implemented in 2021, the
+  beta release of the SSH Open Marketplace offers you the possibility to report
+  issues on every page of the website. Help us to improve our content or to
+  report a bug, using this temporary functionality!
+- re-use the SSH Open Marketplace content using the Application programming
+  Interface (API). See the API documentation in the “technical aspects” section,
+  if you want to know more.
 
-# Content Curation Guidelines
+## Content Curation Guidelines
 
-## Data Population and Curation
+### Data Population and Curation
 
-Because we believe that accurate and up-to-date content is a key to make the SSH Open Marketplace a useful and rich discovery portal, data population and curation are at the heart of our work. Once (meta)data have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach: automatic checks are run on the ingested data, followed by manual review of the identified problems as well as of aspects that cannot be checked automatically. In this process, contributors and moderators are playing an essential role (see below “How to contribute” section). 
+Because we believe that accurate and up-to-date content is a key to make the SSH
+Open Marketplace a useful and rich discovery portal, data population and
+curation are at the heart of our work. Once (meta)data have been ingested in the
+Marketplace, we curate and enrich them thanks to a hybrid approach: automatic
+checks are run on the ingested data, followed by manual review of the identified
+problems as well as of aspects that cannot be checked automatically. In this
+process, contributors and moderators are playing an essential role (see below
+“How to contribute” section).
 
-## Curation Criteria
+### Curation Criteria
 
 Currently the curation criteria fall into three categories.
 
-1. Scientific curation criteria: the SSH Open Marketplace as a discovery platform for the social sciences and humanities may be a suitable place for a broad range of research-relevant resources. Therefore at least two criterias have to be fulfilled by any resource: it needs to have relevance for science and scientists and it has to come with a SSH scope. The pertinence of the SSH scope as such is not further formalised and falls into the decision authority of Moderators. Particularly for resources such as technical services or software the SSH scope could be very loose. In such cases the relevance may be assessed by the uptake or prominence of a resource within the SSH community. 
-2. Technical curation criteria: at least two technical curation criteria have to be met by any resource. The resource has to be up-to-date and/or maintained. This criteria is crucial for the usefulness of any resource for the users. Ideally a resource is maintained and the maintainer is able to offer support for it. The second technical criteria relates to the openness of the resource. The SSH Open Marketplace facilitates the uptake of Open Science workflows and open research practices. Resources showcased in the Marketplace are preferably themselves – in case of software services – built upon open source solutions.
-3. Legal/Ethical curation criteria: by design, the SSH Open Marketplace contributes to maximise the findability and re-use of data, providing the context and the support to realise the FAIR principles – Findable, Accessible, Interoperable and Re-usable – for research data and guiding users towards tools, services or training materials that can help them in their FAIRification workflows. Apart from this the Marketplace has to be GDPR compliant in its usability. This has to be reflected in the manner of presentation of the resources and – more obvious – with regard to the user management.
+1. Scientific curation criteria: the SSH Open Marketplace as a discovery
+   platform for the social sciences and humanities may be a suitable place for a
+   broad range of research-relevant resources. Therefore at least two criterias
+   have to be fulfilled by any resource: it needs to have relevance for science
+   and scientists and it has to come with a SSH scope. The pertinence of the SSH
+   scope as such is not further formalised and falls into the decision authority
+   of Moderators. Particularly for resources such as technical services or
+   software the SSH scope could be very loose. In such cases the relevance may
+   be assessed by the uptake or prominence of a resource within the SSH
+   community.
+2. Technical curation criteria: at least two technical curation criteria have to
+   be met by any resource. The resource has to be up-to-date and/or maintained.
+   This criteria is crucial for the usefulness of any resource for the users.
+   Ideally a resource is maintained and the maintainer is able to offer support
+   for it. The second technical criteria relates to the openness of the
+   resource. The SSH Open Marketplace facilitates the uptake of Open Science
+   workflows and open research practices. Resources showcased in the Marketplace
+   are preferably themselves – in case of software services – built upon open
+   source solutions.
+3. Legal/Ethical curation criteria: by design, the SSH Open Marketplace
+   contributes to maximise the findability and re-use of data, providing the
+   context and the support to realise the FAIR principles – Findable,
+   Accessible, Interoperable and Re-usable – for research data and guiding users
+   towards tools, services or training materials that can help them in their
+   FAIRification workflows. Apart from this the Marketplace has to be GDPR
+   compliant in its usability. This has to be reflected in the manner of
+   presentation of the resources and – more obvious – with regard to the user
+   management.
 
-In 2021, this approach will be further conceptualised to structure the editorial guidelines and to ensure the (meta)data quality of the SSH Open Marketplace content at every step of the curation workflows. 
+In 2021, this approach will be further conceptualised to structure the editorial
+guidelines and to ensure the (meta)data quality of the SSH Open Marketplace
+content at every step of the curation workflows.
 
-## Editorial Guidelines
+### Editorial Guidelines
 
-Editorial guidelines presenting metadata used for the SSH Open Marketplace content description will be added soon!
+Editorial guidelines presenting metadata used for the SSH Open Marketplace
+content description will be added soon!
 
-# How to contribute?
+## How to contribute?
 
-## Becoming a contributor
+### Becoming a contributor
 
-In a few months, you will be able to suggest new content in the SSH Open Marketplace, but also to propose changes to existing items, via user-friendly edit forms. In the meantime, you can use the “report an issue” function available on all pages of the website to improve our content or to report a bug. 
+In a few months, you will be able to suggest new content in the SSH Open
+Marketplace, but also to propose changes to existing items, via user-friendly
+edit forms. In the meantime, you can use the “report an issue” function
+available on all pages of the website to improve our content or to report a bug.
 
-To stay tuned and updated about the developments, and to be aware of events and hands-on sessions organised in 2021, join our community of testers, [registering via the SSHOC website](https://www.sshopencloud.eu/user/register).
+To stay tuned and updated about the developments, and to be aware of events and
+hands-on sessions organised in 2021, join our community of testers,
+[registering via the SSHOC website](https://www.sshopencloud.eu/user/register).
 
-## Becoming a moderator
+### Becoming a moderator
 
-Towards the end of 2021, the editorial board of the SSH Open Marketplace will also be created! Its mission is to ensure the quality of the Marketplace content by reviewing new items and ensuring the editorial policy’s implementation. Moderators are key actors of the SSH Open Marketplace! Let us know if you would be interested to join the SSH Open Marketplace editorial board!
+Towards the end of 2021, the editorial board of the SSH Open Marketplace will
+also be created! Its mission is to ensure the quality of the Marketplace content
+by reviewing new items and ensuring the editorial policy’s implementation.
+Moderators are key actors of the SSH Open Marketplace! Let us know if you would
+be interested to join the SSH Open Marketplace editorial board!
 
-*Because we believe that community efforts should not mean voluntary work, we are investigating different paths for incentives and rewards for SSH Open Marketplace contributors and moderators.*
+_Because we believe that community efforts should not mean voluntary work, we
+are investigating different paths for incentives and rewards for SSH Open
+Marketplace contributors and moderators._
